Added support to define own MessageItem implementation;

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
             "Rentalhost\\VanillaMessage\\": "src/VanillaMessage/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Rentalhost\\VanillaMessage\\Mock\\": "tests/Mock/"
+        }
+    },
 
     "authors": [
         {
